[package]
name = "tide-session"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[dependencies]
tide = "0.2.0"
tide-core = { git = "https://github.com/rustasync/tide", branch = "master" }
tide-cookies = { git = "https://github.com/rustasync/tide", branch = "master" }
cookie = { version = "0.12", features = ["percent-encode"] }
futures-preview = "0.3.0-alpha.16"
#http-service = "0.2.0"
http = "0.1"
regex = "1.1.2"
uuid = { version = "0.7.2", features = ["v4"] }
failure = "0.1.5"
log = "0.4.6"
pretty_env_logger = "0.3.0"

[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
tide = { git = "https://github.com/rustasync/tide", branch = "master" }
tide-core = { git = "https://github.com/rustasync/tide", branch = "master" }
